--- a/src/components/Signup.css
+++ b/src/components/Signup.css
@@ -5,15 +5,15 @@
   text-align: center;
   height: 50vh;
 }
+.user_input_field{
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  width: 50%;
+  margin: 0.5rem auto;
+  text-align: left;
+}
 #sign_up_container h4 {
   margin-top: 2rem;
   font-size: medium;
-}
-#sign_up_container .form-control {
-  border: none;
-  margin-bottom: 1rem;
-  text-align: left;
-}
-.form-control input {
-  width: 100%;
 }
