--- a/src/App.css
+++ b/src/App.css
@@ -33,10 +33,10 @@ body {
 }
 
 .add_to_cart_bttn{
-  width: 15%;
-  display: flex;
-  justify-content: center;
-  margin-bottom: 1rem;
+  width: 100%;
+  margin: 1rem auto;
+  border:none;
+  border-radius: 2px;
 }
 
 .cart_icon{
