switched from getting data from shoe api to shoe firebase database

--- a/src/components/DataHydrator.css
+++ b/src/components/DataHydrator.css
@@ -17,11 +17,11 @@
     margin-top: 1rem;
   }
   
-  #shoe_list{
+  #data_hydrator{
     justify-content: space-around;
   }
   
-  #shoe_list .card{
+  #data_hydrator .card{
     width: 20%;
     margin: 1rem;
   }
